--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -6,6 +6,7 @@
 			</div>
 			<div class="col-md-10">
 				{{> yield "navBar" }}
+				{{> yield "navCategory"}}
 				{{> yield}}				
 			</div>
 		</div>
