Partially implemented local subscriptions. Added a loading template. Restructured folder structure.

--- a/client/views/urlPage/urlPage.html
+++ b/client/views/urlPage/urlPage.html
@@ -5,9 +5,11 @@
 				<a href="{{url}}"><h3>{{url}}</h3></a>
 			</div>
 		</div>
+	{{/with}}
+	{{#with getLangData}}
 		<div class="row">
 			<div class="col-md-12">
-				{{description}}
+				{{data}}
 			</div>
 		</div>
 	{{/with}}
