--- a/client/views/navbar/navbar.html
+++ b/client/views/navbar/navbar.html
@@ -18,8 +18,8 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="{{pathFor route="home"}}">Nothing here</a></li>
-					<li>{{currentLanguage}}</li>
+					<li><a href="#">{{> loginButtons}}</a></li>
+					<li><a href="#">{{currentLanguage}}</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
