--- a/client/views/urlPage/urlPage.html
+++ b/client/views/urlPage/urlPage.html
@@ -1,14 +1,14 @@
-<template name="urlPage">
+<template name='urlPage'>
 	{{#if Template.subscriptionsReady}}
 		{{#with getData}}
-			<div class="row">
-				<div class="page-header col-sm-12">
+			<div class='row'>
+				<div class='page-header col-sm-12'>
 					<h3>{{description}}</h3>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<a href="{{url}}">{{url}}</a>
+			<div class='row'>
+				<div class='col-md-12'>
+					<a href='{{url}}'>{{url}}</a>
 				</div>
 			</div>
 			<br><br>
