--- a/client/views/urlPage/urlPage.html
+++ b/client/views/urlPage/urlPage.html
@@ -7,12 +7,21 @@
 				</div>
 			</div>
 			<div class='row'>
-				<div class='col-md-12'>
+				<div class='col-sm-12'>
 					<a href='{{url}}'>{{url}}</a>
 				</div>
 			</div>
 			<br><br>
-			{{> textAreaMedium}}
+			<div class='row'>
+				<div class='col-sm-4'>
+					{{> yield 'comments'}}
+				</div>
+			</div>
+			<div class='row'>
+				<div class='col-sm-4'>
+					{{> yield 'textAreaMedium'}}
+				</div>
+			</div>
 		{{/with}}
 	{{else}}
 		{{> localLoading}}
