Migrated to FlowRouter

--- a/client/views/adminTools/adminTools.html
+++ b/client/views/adminTools/adminTools.html
@@ -1,10 +1,10 @@
 <template name="adminTools">
 	<div class="row">
 		<div class="col-md-6">
-				{{> yield "leftField1"}}
+				{{> newWord}}
 		</div>
 		<div class="col-md-6">
-				{{> yield "rightField1"}}
+				{{> newUrl}}
 		</div>
 	</div>
 	<div class="row">
