--- a/client/views/navCategory/navCategory.html
+++ b/client/views/navCategory/navCategory.html
@@ -1,17 +1,19 @@
 <template name='navCategory'>
 	<ul class='nav nav-tabs'>
-	  <li role='presentation' class='category-tab {{#if currentTab 'video'}}active{{/if}}' id='video'>
-		{{#linkTo route='result' query='category=video'}}
-			{{_ 'tab_video'}}
-		{{/linkTo}}
-	  </li>
-	  <li role='presentation' class='category-tab {{#if currentTab 'text'}}active{{/if}}' id='text'>
-		{{#linkTo route='result' query='category=text'}}
-			{{_ 'tab_text'}}
-		{{/linkTo}}</li>
-	  <li role='presentation' class='category-tab {{#if currentTab 'image'}}active{{/if}}' id='image'>
-		{{#linkTo route='result' query='category=image'}}
-			{{_ 'tab_image'}}
-		{{/linkTo}}</li>
+		<li role='presentation' class='category-tab {{#if currentTab 'video'}}active{{/if}}' id='video'>
+			<a href='{{pathFor 'result' _id=getWordId query='category=video'}}'>
+				{{_ 'tab_video'}}
+			</a>
+		</li>
+		<li role='presentation' class='category-tab {{#if currentTab 'text'}}active{{/if}}' id='text'>
+			<a href='{{pathFor 'result' _id=getWordId query='category=text'}}'>
+				{{_ 'tab_text'}}
+			</a>
+		</li>
+		<li role='presentation' class='category-tab {{#if currentTab 'image'}}active{{/if}}' id='image'>
+			<a href='{{pathFor 'result' _id=getWordId query='category=image'}}'>
+				{{_ 'tab_image'}}
+			</a>
+		</li>
 	</ul>
 </template>
