--- a/client/views/urlPage/urlPage.html
+++ b/client/views/urlPage/urlPage.html
@@ -14,12 +14,12 @@
 			<br><br>
 			<div class='row'>
 				<div class='col-sm-4'>
-					{{> yield 'comments'}}
+					{{> comments}}
 				</div>
 			</div>
 			<div class='row'>
 				<div class='col-sm-4'>
-					{{> yield 'textAreaMedium'}}
+					{{> textAreaMedium}}
 				</div>
 			</div>
 		{{/with}}
