--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,13 +1,16 @@
-<template name="layout">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-2">
-				{{> yield "sideMenu"}}
+<template name='layout'>
+	<div class='container-fluid'>
+		<div class='row'>
+			<div class='col-md-2'>
+				{{> Template.dynamic template=sideMenu}}
 			</div>
-			<div class="col-md-10">
-				{{> yield "navBar" }}
-				{{> yield "navCategory"}}
-				{{> yield}}				
+			<div class='col-md-10'>
+				<div class='row'>
+					{{> Template.dynamic template=navBar}}
+				</div>
+				<div class='row'>
+					{{> Template.dynamic template=main}}
+				</div>
 			</div>
 		</div>
 	</div>
