Moved back to bootstrap from material

--- a/client/components/commentSections/comments/comments.html
+++ b/client/components/commentSections/comments/comments.html
@@ -7,7 +7,7 @@
 				</div>
 				<div class='panel-footer'>
 					<div class='row'>
-						<div class='col s12'>
+						<div class='col-sm-12'>
 							<span class='pull-right'>{{createdBy.username}} | {{createdAt}}</span>
 						</div>
 					</div>
