--- a/client/views/urlPage/urlPage.html
+++ b/client/views/urlPage/urlPage.html
@@ -7,18 +7,18 @@
 				</div>
 			</div>
 			<div class='row'>
-				<div class='col s12'>
+				<div class='col-sm-12'>
 					<a href='{{url}}'>{{url}}</a>
 				</div>
 			</div>
 			<br><br>
 			<div class='row'>
-				<div class='col s4'>
+				<div class='col-sm-4'>
 					{{> comments}}
 				</div>
 			</div>
 			<div class='row'>
-				<div class='col s4'>
+				<div class='col-sm-4'>
 					{{> textAreaMedium}}
 				</div>
 			</div>
