--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,10 +1,10 @@
 <template name='layout'>
 	<div class='container-fluid'>
 		<div class='row'>
-			<div class='col s2'>
+			<div class='col-sm-2'>
 				{{> Template.dynamic template=sideMenu}}
 			</div>
-			<div class='col s10'>
+			<div class='col-sm-10'>
 				<div class='row'>
 					{{> Template.dynamic template=navBar}}
 				</div>
