--- a/client/views/adminTools/adminTools.html
+++ b/client/views/adminTools/adminTools.html
@@ -1,18 +1,18 @@
 <template name="adminTools">
 	<div class="row">
-		<div class="col s6">
+		<div class="col-sm-6">
 				{{> newWord}}
 		</div>
-		<div class="col s6">
+		<div class="col-sm-6">
 				{{> newUrl}}
 		</div>
 	</div>
 	<div class="row">
-		<div class="col s6">
+		<div class="col-sm-6">
 				<button id="dropUrls">Drop urls</button>
 				<button id="dropWords">Drop words</button>
 		</div>
-		<div class="col s6">
+		<div class="col-sm-6">
 				<button id="addLanguages">Add languages</button>
 		</div>
 	</div>
