--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -1,1 +1,66 @@
-@import 'stylesheet/bootstrap';
+/*!
+ * stylesheets/bootstrap v3.3.6 (http://getstylesheets/bootstrap.com)
+ * Copyright 2011-2015 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/stylesheets/bootstrap/blob/master/LICENSE)
+ */
+
+// Core variables and mixins
+@import "themes/variables";
+@import "stylesheets/bootstrap/mixins";
+
+// Reset and dependencies
+@import "stylesheets/bootstrap/normalize";
+@import "stylesheets/bootstrap/print";
+@import "stylesheets/bootstrap/glyphicons";
+
+// Core CSS
+@import "stylesheets/bootstrap/scaffolding";
+@import "stylesheets/bootstrap/type";
+@import "stylesheets/bootstrap/code";
+@import "stylesheets/bootstrap/grid";
+@import "stylesheets/bootstrap/tables";
+@import "stylesheets/bootstrap/forms";
+@import "stylesheets/bootstrap/buttons";
+
+// Components
+@import "stylesheets/bootstrap/component-animations";
+@import "stylesheets/bootstrap/dropdowns";
+@import "stylesheets/bootstrap/button-groups";
+@import "stylesheets/bootstrap/input-groups";
+@import "stylesheets/bootstrap/navs";
+@import "stylesheets/bootstrap/navbar";
+@import "stylesheets/bootstrap/breadcrumbs";
+@import "stylesheets/bootstrap/pagination";
+@import "stylesheets/bootstrap/pager";
+@import "stylesheets/bootstrap/labels";
+@import "stylesheets/bootstrap/badges";
+@import "stylesheets/bootstrap/jumbotron";
+@import "stylesheets/bootstrap/thumbnails";
+@import "stylesheets/bootstrap/alerts";
+@import "stylesheets/bootstrap/progress-bars";
+@import "stylesheets/bootstrap/media";
+@import "stylesheets/bootstrap/list-group";
+@import "stylesheets/bootstrap/panels";
+@import "stylesheets/bootstrap/responsive-embed";
+@import "stylesheets/bootstrap/wells";
+@import "stylesheets/bootstrap/close";
+
+// Components w/ JavaScript
+@import "stylesheets/bootstrap/modals";
+@import "stylesheets/bootstrap/tooltip";
+@import "stylesheets/bootstrap/popovers";
+@import "stylesheets/bootstrap/carousel";
+
+// Utility classes
+@import "stylesheets/bootstrap/utilities";
+@import "stylesheets/bootstrap/responsive-utilities";
+
+
+//Overrides
+@import "themes/navbar";
+@import "themes/word-box";
+@import "themes/side-bar";
+@import "themes/footer";
+
+
+@import "themes/config";
