--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,7 +1,7 @@
 <template name='layout'>
 	<div class='container-fluid'>
 		<div class='row'>
-			<div class='col-sm-2'>
+			<div class='col-sm-2 col-side-bar'>
 				{{> Template.dynamic template=sideMenu}}
 			</div>
 			<div class='col-sm-10'>
@@ -14,6 +14,12 @@
 			</div>
 		</div>
 	</div>
-</template>
+	<footer class='footer'>
+			<div class='container'>
+				<div class='col-sm-12'>
+					Test
+				</div>
+			</div>
+	</footer></template>
 
 
