Voting partially implemented

--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -61,6 +61,10 @@
 @import "themes/word-box";
 @import "themes/side-bar";
 @import "themes/footer";
+@import "themes/voting";
 
 
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import "themes/config";
+@import "themes/md-config";
