--- a/client/views/navbar/navbar.html
+++ b/client/views/navbar/navbar.html
@@ -14,7 +14,7 @@
 					<span class='icon-bar'></span>
 				</button>
 				<form class='navbar-form'>
-					<span class="glyphicon glyphicon-envelope"></span>
+					<i class="material-icons">search</i>
 					<div class='form-group'>
 						{{> EasySearch.Input index=wordsIndex attributes=attrInput}}
 					</div>
