--- a/client/views/navbar/navbar.html
+++ b/client/views/navbar/navbar.html
@@ -26,6 +26,10 @@
 				<div class='navbar-right'>
 					<a class='navbar-brand' href='{{pathFor 'home'}}'>LEARNXYZ</a>
 				</div>
+				<ul class='nav navbar-nav navbar-right'>
+					<li><a>Button</a></li>
+					<li><a>{{> loginButtons}}</a></li>
+				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
