--- a/client/views/newUrl/newUrl.html
+++ b/client/views/newUrl/newUrl.html
@@ -7,7 +7,7 @@
 				{{> afQuickField name="description"}}
 				{{> afQuickField name="relatedWords"}}
 				{{> afQuickField name="urlType" options="allowed"}}
-				{{> afQuickField name="language" id="field_language" value=fieldLanguage readonly=setReadOnly}}
+				{{> afQuickField name="language" id="field-language" value=fieldLanguage readonly=setReadOnly}}
 			<div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 				<button type="reset" class="btn btn-default">Reset</button>
