--- a/client/views/newWord/newWord.html
+++ b/client/views/newWord/newWord.html
@@ -5,7 +5,7 @@
 			<legend>{{_ "label_newWord"}}</legend>
 				{{> afQuickField name="word"}}
 				{{> afQuickField name="description"}}
-				{{> afQuickField name="language" id="field_language" value=fieldLanguage readonly=setReadOnly}}
+				{{> afQuickField name="language" id="field-language" value=fieldLanguage readonly=setReadOnly}}
 			<div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 				<button type="reset" class="btn btn-default">Reset</button>
