--- a/client/components/voting/voting.html
+++ b/client/components/voting/voting.html
@@ -4,7 +4,7 @@
 			<a href=''><i class='material-icons md-36' id='upvote'>keyboard_arrow_up</i></a>
 		</div>
 		<div class='row'>
-		0
+			{{voteCount}}
 		</div>
 		<div class='row'>
 			<a href=''><i class='material-icons md-36' id='downvote'>keyboard_arrow_down</i></a>
