--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -17,9 +17,10 @@
 	<footer class='footer'>
 			<div class='container'>
 				<div class='col-sm-12'>
-					Test
+					Joachim Blaafjell Holwech
 				</div>
 			</div>
-	</footer></template>
+	</footer>
+</template>
 
 
