Visual improvements. Added a new word button when there are no results

--- a/client/components/newUrlInput/newUrlInput.html
+++ b/client/components/newUrlInput/newUrlInput.html
@@ -1,4 +1,4 @@
-<template name="newUrl">
+<template name="newUrlInput">
 	{{> nfWarning}}
 	{{#autoForm schema=newUrlSchema id="newUrl" type="method" meteormethod="newUrl"}}
 		<fieldset>
