--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -58,10 +58,13 @@
 
 //Overrides
 @import "themes/navbar";
-@import "themes/word-box";
-@import "themes/side-bar";
+@import "themes/side-menu";
 @import "themes/footer";
 @import "themes/voting";
+@import "themes/layout";
+@import "themes/nav-tabs";
+@import "themes/panels";
+@import "themes/icons";
 
 
 @import url(https://fonts.googleapis.com/css?family=Roboto);
