--- a/client/css/themes/_md-config.scss
+++ b/client/css/themes/_md-config.scss
@@ -3,6 +3,7 @@
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
+.material-icons.md-48 { font-size: 78px; }
 
 // Rules for using icons as black on a light background.
 .material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
