--- a/client/views/newWord/newWord.html
+++ b/client/views/newWord/newWord.html
@@ -1,15 +1,7 @@
-<template name="newWord">
-	{{> nfWarning}}
-	{{#autoForm schema=newWordSchema id="newWord" type="method" meteormethod="newWord"}}
-		<fieldset>
-			<legend>{{_ "label_newWord"}}</legend>
-				{{> afQuickField name="word"}}
-				{{> afQuickField name="description"}}
-				{{> afQuickField name="language" id="field-language" value=fieldLanguage readonly=setReadOnly}}
-			<div>
-				<button type="submit" class="btn btn-primary">Submit</button>
-				<button type="reset" class="btn btn-default">Reset</button>
-			</div>
-		</fieldset>
-	{{/autoForm}}
+<template name='newWord'>
+	<div class='col-md-4'></div>
+	<div class='col-md-4'>
+		{{> newWordInput}}
+	</div>
+	<div class='col-md-4'></div>
 </template>
