--- a/client/views/wordPage/wordPage.html
+++ b/client/views/wordPage/wordPage.html
@@ -3,7 +3,7 @@
 	{{#if Template.subscriptionsReady}}
 		{{#each urlData}}
 			<a href='{{pathFor 'urlPage' _wordId=wordId _id=urlId}}' class='unstyle-link'>
-				<div class='panel panel-default word-panel-box'>
+				<div class='panel panel-default'>
 					<div class='panel-body'>
 						<div class='col-sm-1'>
 							<div class='voting-container'>
