--- a/client/css/themes/_footer.scss
+++ b/client/css/themes/_footer.scss
@@ -1,12 +1,12 @@
 footer {
-		position: fixed;
-		height: 50px;
-		bottom: 0;
-		width: 100%;
-		background: #404040;
-		color: white;
+	height: 50px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	background: $gray;
+	color: white;
 }
 
-.__blaze-root {
+#__blaze-root {
 	height: 100%;
 }
