--- a/client/views/adminTools/adminTools.html
+++ b/client/views/adminTools/adminTools.html
@@ -1,10 +1,10 @@
 <template name='adminTools'>
 	<div class='row'>
 		<div class='col-sm-6'>
-				{{> newWord}}
+				{{> newWordInput}}
 		</div>
 		<div class='col-sm-6'>
-				{{> newUrl}}
+				{{> newUrlInput}}
 		</div>
 	</div>
 	<div class='row'>
