--- a/client/views/searchResult/searchResult.html
+++ b/client/views/searchResult/searchResult.html
@@ -2,12 +2,12 @@
 	{{#if Template.subscriptionsReady}}
 		{{#EasySearch.Each index=wordsIndex}}
 			<a href='{{pathFor 'result' _id=getWordId query=getCurrentTab}}'>
-				<div class='panel panel-default word-panel-box'>
-					<div class='panel-body word-box'>
-						<div class='col-sm-1 word-name-box'>
+				<div class='panel panel-default'>
+					<div class='panel-body'>
+						<div class='col-sm-1'>
 							{{word}}
 						</div>
-						<div class='col-sm-11 word-description-box'>
+						<div class='col-sm-11'>
 							{{description}}
 						</div>
 					</div>
@@ -22,7 +22,19 @@
 		{{> EasySearch.LoadMore index=wordsIndex}}
 
 		{{#EasySearch.IfNoResults index=wordsIndex}}
-			<div class='no-results'>No results found!</div>
+		<a href='{{pathFor 'newWord'}}'>
+			<div class='col-sm-3 col-centered'>
+				<div class='row'>
+					<div class='col-sm-12'>
+						<i class='material-icons md-48' id='new-word-icon'>add_circle_outline</i>
+					</div>
+					
+				</div>
+				<div class='row'>
+					<p>This word does not exits. Want to add it? (x)</p>
+				</div>
+			</div>
+		</a>
 		{{/EasySearch.IfNoResults}}
 	{{else}}
 		{{> localLoading}}
