--- a/client/views/newWord/newWord.html
+++ b/client/views/newWord/newWord.html
@@ -1,7 +1,7 @@
 <template name='newWord'>
-	<div class='col-md-4'></div>
-	<div class='col-md-4'>
+	<div class='col-md-8'></div>
+	<div class='col-md-8 content'>
 		{{> newWordInput}}
 	</div>
-	<div class='col-md-4'></div>
+	<div class='col-md-8'></div>
 </template>
